products-ui/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: products-ui
spec:
  selector:
    app: products-ui
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: http
