products-ui/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: products-ui
spec:
  path: /
  to:
    kind: Service
    name: products-ui
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
